--- a/puzzle-yarnfun/index.html
+++ b/puzzle-yarnfun/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Puzzle: Yarn Fun - Offline Match-3 Cat Game</title>
     <meta name="description" content="Download Puzzle: Yarn Fun - offline match-3 cat puzzle game. Enjoy cozy yarn and adorable cats for stress relief. Play 1000+ levels offline - free to play!">
-    <meta name="keywords" content="yarn puzzle game, match 3 game offline, cat puzzle game, stress relief game, yarn cat game, free android games">
+    <meta name="keywords" content="yarn puzzle game, match 3 game offline, cat puzzle, stress relief, yarn cat game, free android games">
     <meta name="author" content="Puzzle Yarn Fun">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="googlebot" content="index, follow, snippet, archive">
@@ -266,69 +266,69 @@
             <div class="container">
                 <h2 id="other-games-title" class="section-title">Other Games You Might Like</h2>
                 <div class="games-grid" role="list" aria-label="Recommended games">
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.puzzleyarnfun" class="game-item" role="listitem" aria-label="Puzzle: Yarn Fun - Best Offline Match-3 Cat Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.puzzleyarnfun" class="game-item" role="listitem" aria-label="Puzzle: Yarn Fun - Best Offline Match-3 Cat Puzzle Game" target="_blank" rel="noopener noreferrer" title="Puzzle: Yarn Fun - Best Offline Match-3 Cat Puzzle Game">
                         <img src="./images/game/puzzleyarnfun.webp" alt="Puzzle: Yarn Fun - Offline Match-3 Cat Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                       
                         <span class="game-name">Puzzle: Yarn Fun</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.chromajam" class="game-item" role="listitem" aria-label="Chroma Jam - Colorful Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.chromajam" class="game-item" role="listitem" aria-label="Chroma Jam - Colorful Puzzle Game" target="_blank" rel="noopener noreferrer" title="Chroma Jam - Colorful Puzzle Game">
                         <img src="./images/game/chromajam.webp" alt="Chroma Jam - Color Matching Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                       
                         <span class="game-name">Chroma Jam</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.bubblesafari" class="game-item" role="listitem" aria-label="Bubble Safari - Bubble Shooter Match-3 Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.bubblesafari" class="game-item" role="listitem" aria-label="Bubble Safari - Bubble Shooter Match-3 Game" target="_blank" rel="noopener noreferrer" title="Bubble Safari - Bubble Shooter Match-3 Game">
                         <img src="./images/game/bubblesafari.webp" alt="Bubble Safari - Fun Bubble Shooter Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Bubble Safari</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.watersort" class="game-item" role="listitem" aria-label="Puzzle: Water Sort - Water Bottle Sorting Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.watersort" class="game-item" role="listitem" aria-label="Puzzle: Water Sort - Water Bottle Sorting Game" target="_blank" rel="noopener noreferrer" title="Puzzle: Water Sort - Water Bottle Sorting Game">
                         <img src="./images/game/watersort.webp" alt="Puzzle: Water Sort - Color Sorting Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Puzzle: Water Sort</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.blockpuzzlesavegirl" class="game-item" role="listitem" aria-label="Block Puzzle: Save Girl - Brain Teaser Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.blockpuzzlesavegirl" class="game-item" role="listitem" aria-label="Block Puzzle: Save Girl - Brain Teaser Puzzle Game" target="_blank" rel="noopener noreferrer" title="Block Puzzle: Save Girl - Brain Teaser Puzzle Game">
                         <img src="./images/game/blockpuzzlesavegirl.webp" alt="Block Puzzle: Save Girl - Creative Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Block Puzzle: Save Girl</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.rescuekingpuzzle" class="game-item" role="listitem" aria-label="Rescue King Puzzle - Hero Rescue Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.rescuekingpuzzle" class="game-item" role="listitem" aria-label="Rescue King Puzzle - Hero Rescue Puzzle Game" target="_blank" rel="noopener noreferrer" title="Rescue King Puzzle - Hero Rescue Puzzle Game">
                         <img src="./images/game/rescuekingpuzzle.webp" alt="Rescue King Puzzle - Physics-based Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Rescue King Puzzle</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.mahjongmatch" class="game-item" role="listitem" aria-label="Mahjong Match: Brain Puzzle - Classic Tile Matching Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.mahjongmatch" class="game-item" role="listitem" aria-label="Mahjong Match: Brain Puzzle - Classic Tile Matching Game" target="_blank" rel="noopener noreferrer" title="Mahjong Match: Brain Puzzle - Classic Tile Matching Game">
                         <img src="./images/game/mahjongmatch.webp" alt="Mahjong Match: Brain Puzzle - Relaxing Tile Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Mahjong Match: Brain Puzzle</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.rolldash" class="game-item" role="listitem" aria-label="Roll Dash - Fast-paced Arcade Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.rolldash" class="game-item" role="listitem" aria-label="Roll Dash - Fast-paced Arcade Game" target="_blank" rel="noopener noreferrer" title="Roll Dash - Fast-paced Arcade Game">
                         <img src="./images/game/rolldash.webp" alt="Roll Dash - Endless Runner Arcade Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Roll Dash</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.acestrike" class="game-item" role="listitem" aria-label="Sky Thunder: Ace Strike - Action-packed Air Combat Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.acestrike" class="game-item" role="listitem" aria-label="Sky Thunder: Ace Strike - Action-packed Air Combat Game" target="_blank" rel="noopener noreferrer" title="Sky Thunder: Ace Strike - Action-packed Air Combat Game">
                         <img src="./images/game/acestrike.webp" alt="Sky Thunder: Ace Strike - Jet Fighter Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Sky Thunder: Ace Strike</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.spinscrewjam" class="game-item" role="listitem" aria-label="Spin Screw Jam - Physics Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.spinscrewjam" class="game-item" role="listitem" aria-label="Spin Screw Jam - Physics Puzzle Game" target="_blank" rel="noopener noreferrer" title="Spin Screw Jam - Physics Puzzle Game">
                         <img src="./images/game/spinscrewjam.webp" alt="Spin Screw Jam - Mechanical Puzzle Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Spin Screw Jam</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.hunterevolveuprising" class="game-item" role="listitem" aria-label="Hunter: Evolve Uprising - Epic RPG Adventure Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.hunterevolveuprising" class="game-item" role="listitem" aria-label="Hunter: Evolve Uprising - Epic RPG Adventure Game" target="_blank" rel="noopener noreferrer" title="Hunter: Evolve Uprising - Epic RPG Adventure Game">
                         <img src="./images/game/hunterevolveuprising.webp" alt="Hunter: Evolve Uprising - Fantasy RPG Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Hunter: Evolve Uprising</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.blockblastpop" class="game-item" role="listitem" aria-label="Smash Blocks - Addictive Arcade Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.blockblastpop" class="game-item" role="listitem" aria-label="Smash Blocks - Addictive Arcade Game" target="_blank" rel="noopener noreferrer" title="Smash Blocks - Addictive Arcade Game">
                         <img src="./images/game/blockblastpop.webp" alt="Smash Blocks - Colorful Block Breaking Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Smash Blocks</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.policeraiders" class="game-item" role="listitem" aria-label="Police Raiders - Action-packed Cop Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.policeraiders" class="game-item" role="listitem" aria-label="Police Raiders - Action-packed Cop Game" target="_blank" rel="noopener noreferrer" title="Police Raiders - Action-packed Cop Game">
                         <img src="./images/game/policeraiders.webp" alt="Police Raiders - Police Chase Action Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Police Raiders</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.tankera" class="game-item" role="listitem" aria-label="Tank Era - Strategic Tank Battle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.tankera" class="game-item" role="listitem" aria-label="Tank Era - Strategic Tank Battle Game" target="_blank" rel="noopener noreferrer" title="Tank Era - Strategic Tank Battle Game">
                         <img src="./images/game/tankera.webp" alt="Tank Era - WWII Tank Strategy Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Tank Era</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.puzzlehex" class="game-item" role="listitem" aria-label="Puzzle Hex - Hexagon Puzzle Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.puzzlehex" class="game-item" role="listitem" aria-label="Puzzle Hex - Hexagon Puzzle Game" target="_blank" rel="noopener noreferrer" title="Puzzle Hex - Hexagon Puzzle Game">
                         <img src="./images/game/puzzlehex.webp" alt="Puzzle Hex - Hex Tile Matching Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Puzzle Hex</span>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.shiftdashreac" class="game-item" role="listitem" aria-label="Shift Dash Reac - Fast Reflexes Casual Game" target="_blank" rel="noopener noreferrer">
+                    <a href="https://play.google.com/store/apps/details?id=cc.staemcommunity.shiftdashreac" class="game-item" role="listitem" aria-label="Shift Dash Reac - Fast Reflexes Casual Game" target="_blank" rel="noopener noreferrer" title="Shift Dash Reac - Fast Reflexes Casual Game">
                         <img src="./images/game/shiftdashreac.webp" alt="Shift Dash Reac - Reaction Time Casual Game" class="game-image" loading="lazy" width="100" height="100">
                         <span class="game-name">Shift Dash Reac</span>
                     </a>
