--- a/puzzle-yarnfun/index.html
+++ b/puzzle-yarnfun/index.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="X-Robots-Tag" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="google-adsense-account" content="ca-pub-8482820298032478">
-    
+    <meta name="google-site-verification" content="lhLqYQnp-BcwBTHHv6QQi7CdGKSJnjVqR2UZBVdZ9OI" />
     <meta name="theme-color" content="#FF6B6B">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
